added header for edcards

--- a/Python3.10.5_pipenv/Flask_2.0/ed_cards/templates/base.html
+++ b/Python3.10.5_pipenv/Flask_2.0/ed_cards/templates/base.html
@@ -12,18 +12,13 @@
 </head>
 <body>
   <main class="wrapper">
-    {# {% block header %}
+    {% block header %}
       {% include "header.html" %}
-    {% endblock %}  #}
+    {% endblock %}
     <section class="content">
       <div class="container">
         <div class="content__main main">
           {% block content %}
-            {% if title %}
-            <h1 class="main__title">{{ title }}</h1>
-            {% else %}
-            <h1 class="main__title">Заголовок</h1>
-            {% endif %}
           {% endblock %}
         </div>
       </div>
