--- a/Python3.10.5_pipenv/Flask_2.0/ed_cards/static/css/styles.css
+++ b/Python3.10.5_pipenv/Flask_2.0/ed_cards/static/css/styles.css
@@ -97,6 +97,7 @@ body {
   font-family: Montserrat, sans-serif;
   font-weight: 400;
   font-size: 16px;
+  background: linear-gradient(#4da0a8, #041517);
 }
 .wrapper {
   display: flex;
@@ -106,4 +107,72 @@ body {
   max-width: 1200px;
   padding: 0 20px;
   margin: 0 auto;
+}
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 75px;
+}
+.logo {
+  font-size: 36px;
+  color: hsl(185, 58%, 65%); /* #71d1d9; */
+}
+.logo_thin {
+  font-weight: 300;
+}
+.logo_fat {
+  font-weight: 600;
+}
+.header__btn {
+  grid-column: 0.5;
+  grid-row: 0.8333333333;
+  color: #a3eaf0;
+  font-weight: 600;
+}
+.btn {
+  width: 100px;
+  height: 40px;
+  border-radius: 5px;
+  box-shadow: 0.05rem 0.05rem 0.2rem #041517, -0.05rem -0.05rem 0.2rem #498180;
+  background-color: #63b8bf;
+  justify-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: 0.3s ease;
+  border: solid 1px #11565e;
+}
+.btn:hover {
+  box-shadow: none;
+  border: solid 1px #11565e;
+  background-color: #4da0a8;
+  color: #71d1d9;
+}
+.btn:active {
+  box-shadow: inset 0.05rem 0.05rem 0.02rem #041517, inset -0.05rem -0.05rem 0.02rem #498180;
+  background-color: #3f828a;
+  color: #4da0a8;
+}
+.logo_embossed, .btn_embossed {
+	text-shadow:
+		0.025rem 0.05rem 0.05rem #041517,
+		-0.025rem -0.05rem 0.05rem #498180;
+}
+
+.engraved
+{
+	text-shadow:
+		-0.025rem -0.05rem 0.05rem black,
+		0.025rem 0.05rem 0.05rem white;
+}
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
